test/spec_vectors/select/fail/module_6.wat
(module (func $type-externref-implicit (param $r externref) (drop (select (local.get $r) (local.get $r) (i32.const 1)))))